--- a/React/Prop It Up/prop_it_up/src/App.css
+++ b/React/Prop It Up/prop_it_up/src/App.css
@@ -23,6 +23,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+button{
+  width: 100px;
+  height: 30px;
+}
 
 .App-link {
   color: #61dafb;
